force-app/main/default/objects/Estructura_Organizacional__c/Estructura_Organizacional__c.object-meta.xml
<CustomObject>
    <label>Estructura Organizacional</label>
    <nameField>
        <displayFormat>EstOrg-{000000000}</displayFormat>
        <label>Nombre de Estructura Organizacional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estructura Organizacional</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>