force-app/main/default/objects/Estructura_Organizacional__c/fields/CodCompania__c.field-meta.xml
<CustomField>
    <fullName>CodCompania__c</fullName>
    <label>Código de la compañía</label>
    <length>120</length>
    <type>Text</type>
</CustomField>