force-app/main/default/objects/Estructura_Organizacional__c/fields/CodSucursal__c.field-meta.xml
<CustomField>
    <fullName>CodSucursal__c</fullName>
    <label>Código de la sucursal</label>
    <length>16</length>
    <type>Text</type>
</CustomField>