force-app/main/default/objects/Estructura_Organizacional__c/fields/CodUnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>CodUnidadNegocio__c</fullName>
    <label>Código de la unidad de negocio</label>
    <length>16</length>
    <type>Text</type>
</CustomField>