force-app/main/default/objects/Estructura_Organizacional__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Nombre de la compañia</label>
    <length>120</length>
    <type>Text</type>
</CustomField>