force-app/main/default/objects/Estructura_Organizacional__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Nombre de la sucursal</label>
    <length>120</length>
    <type>Text</type>
</CustomField>