force-app/main/default/objects/Estructura_Organizacional__c/fields/UnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadNegocio__c</fullName>
    <label>Nombre de la unidad de negocio</label>
    <length>120</length>
    <type>Text</type>
</CustomField>