force-app/main/default/objects/Estructura_Organizacional__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodCompania__c</columns>
    <columns>CodSucursal__c</columns>
    <columns>CodUnidadNegocio__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>